--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>app</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
