--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,22 +2,20 @@
 stages:
   - package
   - build
-  - deploy
+#  - deploy
 
 variables:
   MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
-  JAVA_OPTS_COMMON: "-Xmx512M -Xms512M -XX:+UseConcMarkSweepGC -XX:NativeMemoryTracking=summary -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -XX:+ExplicitGCInvokesConcurrentAndUnloadsClasses -XX:+CMSClassUnloadingEnabled -XX:+ParallelRefProcEnabled -XX:+CMSScavengeBeforeRemark -XX:MaxMetaspaceSize=1024M -XX:MetaspaceSize=50M"
-  JAVA_OPTS1: "-Ddata_center=bx -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=7003"
-  JAVA_OPTS2: "-Ddata_center=yz -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=7004"
-  APP_NAME1: config1
-  APP_NAME2: config2
-  image_latest: config-server:latest
-  image_name: config-server:$CI_BUILD_REF
+#  JAVA_OPTS1: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=7003"
+#  JAVA_OPTS2: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=7004"
+  docker_server: 10.16.12.206
+  image_latest: 10.16.12.206/smc-gateway/smc-gateway:latest
+  image_name: 10.16.12.206/smc-gateway/smc-gateway:$CI_BUILD_REF
 
 mvn:package:
   stage: package
   tags:
-    - config-server
+    - smc-gateway
   image: maven:3.6.3-openjdk-11
   #缓存mvn库
   cache:
@@ -33,7 +31,7 @@ mvn:package:
 docker:build:
   stage: build
   tags:
-    - config-server
+    - smc-gateway
   image: docker:19.03.1
 #  before_script:
     #登录到gitlab集成的注册表
@@ -43,19 +41,22 @@ docker:build:
     # 最后的"."表示当前目录
 #    低版本不支持 https://docs.gitlab.com/ee/ci/variables/predefined_variables.html
 #    - docker build --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest .
+    - docker login -u binglongli -p Libinglong123 ${docker_server}
     - docker build --tag $image_name --tag $image_latest .
     #推送到gitlab集成的注册表
-#    - docker push $CI_REGISTRY_IMAGE:latest
+    - docker push ${image_latest}
+    - docker push ${image_name}
 
-docker:deploy:
-  stage: deploy
-  tags:
-    - config-server
-  image: docker:19.03.1
-  script:
-    - docker container stop $APP_NAME1 || true
-    - docker container rm $APP_NAME1 || true
-    - docker run -m 512M -d --network=host --restart=always --name=$APP_NAME1 -e JAVA_OPTS="$JAVA_OPTS_COMMON $JAVA_OPTS1" $image_name
-    - docker container stop $APP_NAME2 || true
-    - docker container rm $APP_NAME2 || true
-    - docker run -m 512M -d --network=host --restart=always --name=$APP_NAME2 -e JAVA_OPTS="$JAVA_OPTS_COMMON $JAVA_OPTS2" $image_name
+# 部署由运维接管
+#docker:deploy:
+#  stage: deploy
+#  tags:
+#    - config-server
+#  image: docker:19.03.1
+#  script:
+#    - docker container stop $APP_NAME1 || true
+#    - docker container rm $APP_NAME1 || true
+#    - docker run -m 512M -d --network=host --restart=always --name=$APP_NAME1 -e JAVA_OPTS="$JAVA_OPTS_COMMON $JAVA_OPTS1" $image_name
+#    - docker container stop $APP_NAME2 || true
+#    - docker container rm $APP_NAME2 || true
+#    - docker run -m 512M -d --network=host --restart=always --name=$APP_NAME2 -e JAVA_OPTS="$JAVA_OPTS_COMMON $JAVA_OPTS2" $image_name
