--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ mvn:package:
     paths:
     - target/app.jar
   script:
+    - ifconfig
     - mvn package -Dmaven.test.skip=true --settings $CI_PROJECT_DIR/conf/settings.xml
 
 docker:build:
