--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ mvn:package:
     paths:
     - target/app.jar
   script:
-    - mvn package -Dmaven.test.skip=true --settings $CI_PROJECT_DIR/conf/settings.xml
+    - mvn package -Dmaven.test.skip=true --settings $CI_PROJECT_DIR/conf/settings.xml -U
 
 docker:build:
   stage: build
