--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,12 @@ mvn:package:
   script:
     - mvn package -Dmaven.test.skip=true --settings $CI_PROJECT_DIR/conf/settings.xml -U
 
+
+services:
+  - name: docker:dind
+    command: ["--insecure-registry=10.16.12.206"]
+
+
 docker:build:
   stage: build
   tags:
