--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ docker:build:
   stage: build
   tags:
     - smc-gateway
-  image: 10.16.12.204/smc-gateway/local-docker
+  image: 10.16.12.204/smc-gateway/local-docker:1.0
 #  before_script:
     #登录到gitlab集成的注册表
 #    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
