--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,17 +36,13 @@ docker:build:
     - smc-gateway
   image: docker:19.03.1
 #  image: 10.16.12.204/smc-gateway/local-docker:1.0
-#  before_script:
-    #登录到gitlab集成的注册表
-#    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-  script:
-    - export
-    # 最后的"."表示当前目录
-#    低版本不支持 https://docs.gitlab.com/ee/ci/variables/predefined_variables.html
-#    - docker build --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest .
+  before_script:
     - docker login -u binglongli -p Libinglong123 ${docker_server}
+  script:
+#    - export
+#    低版本不支持 https://docs.gitlab.com/ee/ci/variables/predefined_variables.html
+# 最后的"."表示当前目录
     - docker build --tag $image_name --tag $image_latest .
-    #推送到gitlab集成的注册表
     - docker push ${image_latest}
     - docker push ${image_name}
 
