--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,8 @@ variables:
   docker_server: 10.16.12.204
   image_latest: 10.16.12.204/smc-gateway/smc-gateway:latest
   image_name: 10.16.12.204/smc-gateway/smc-gateway:$CI_BUILD_REF
-  DOCKER_AUTH_CONFIG: "{\"auths\":{\"10.16.12.204\":{\"auth\":\"YmluZ2xvbmdsaTpMaWJpbmdsb25nMTIz\"}}}"
+#  如果拉取的镜像来源是私服,则需要加权限认证
+#  DOCKER_AUTH_CONFIG: "{\"auths\":{\"10.16.12.204\":{\"auth\":\"YmluZ2xvbmdsaTpMaWJpbmdsb25nMTIz\"}}}"
 
 mvn:package:
   stage: package
