--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 # 该脚本用于gitlab的pipeline,如果不适用pipeline的话,可以忽略.
 stages:
   - package
+  - sonar
   - build
 #  - deploy
 
@@ -30,6 +31,24 @@ mvn:package:
   script:
     - mvn package -Dmaven.test.skip=true --settings $CI_PROJECT_DIR/conf/settings.xml -U
 
+sonarqube-check:
+  stage: sonar
+  image: maven:3.6.3-jdk-11
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+#    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+    SONAR_HOST_URL: http://10.16.12.206:30240
+  cache:
+    key: "${CI_BUILD_NAME}"
+    paths:
+      - .sonar/cache
+  script:
+    - mvn verify sonar:sonar -Dsonar.qualitygate.wait=true
+  allow_failure: true
+  only:
+    - merge_requests
+    - master
+    - develop
 
 docker:build:
   stage: build
