--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,9 @@ mvn:package:
 
 sonarqube-check:
   stage: sonar
-  image: maven:3.6.3-jdk-11
+  tags:
+    - smc-gateway
+  image: maven:3.6.3-openjdk-11
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
 #    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
