--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.7</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.sohu.smc</groupId>
             <artifactId>smc-usercenter-ds-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
