--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,18 @@
     <dependencies>
 
         <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>4.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sohu.mrd.framework.monitor</groupId>
+            <artifactId>metric</artifactId>
+            <version>1.2.20.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.lettuce</groupId>
             <artifactId>lettuce-core</artifactId>
         </dependency>
