--- a/pom.xml
+++ b/pom.xml
@@ -133,10 +133,23 @@
         </plugins>
         <resources>
             <resource>
-                <directory>${project.basedir}</directory>
+                <directory>${basedir}/src/main/resources</directory>
+                <filtering>true</filtering>
                 <includes>
-                    <include>**/*.properties</include>
+                    <include>**/application*.yml</include>
+                    <include>**/application*.yaml</include>
+                    <include>**/application*.properties</include>
+                    <include>**/dubbo*.properties</include>
                 </includes>
+            </resource>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+                <excludes>
+                    <exclude>**/application*.yml</exclude>
+                    <exclude>**/application*.yaml</exclude>
+                    <exclude>**/application*.properties</exclude>
+                    <exclude>**/dubbo*.properties</exclude>
+                </excludes>
             </resource>
         </resources>
     </build>
